--- a/app.css
+++ b/app.css
@@ -32,8 +32,8 @@
   /* Image background  */
   --imgbg: url(assets/background.jpg); /* Image URL */
   --imgcol: linear-gradient(
-    rgba(255, 255, 255, 0.7),
-    rgba(255, 255, 255, 0.7)
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.6)
   ); /* Filter color */
 }
 
@@ -49,8 +49,8 @@
 
   /* Image background  */
   --imgcol: linear-gradient(
-    rgba(0, 0, 0, 0.85),
-    rgba(0, 0, 0, 0.85)
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)
   ); /* Filter color */
 }
 
@@ -87,6 +87,7 @@ body {
 .withImageBackground {
   background-image: var(--imgcol), var(--imgbg);
   background-size: cover;
+  background-position: center;
 }
 
 #themeButton {
