💡 Fix broken comment art

--- a/app.css
+++ b/app.css
@@ -6,8 +6,8 @@
 
 /*
 //  ┬  ┬┌─┐┬─┐┬┌─┐┌┐ ┬  ┌─┐┌─┐
-//  ┐┌┘├─┤├┬┘│├─┤├┴┐│  ├┤ └─┐
-//  ┘ ┴ ┴┴└─┴┴ ┴└─┘┴─┘└─┘└─┘
+//  └┐┌┘├─┤├┬┘│├─┤├┴┐│  ├┤ └─┐
+//   └┘ ┴ ┴┴└─┴┴ ┴└─┘┴─┘└─┘└─┘
  */
 
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&display=swap"); /* Font Import */
