--- a/app.css
+++ b/app.css
@@ -91,19 +91,7 @@ body {
 }
 
 #themeButton {
-  position: absolute;
-  margin: 2em 2em 0 0;
-  right: 0;
-  top: 0;
-  color: var(--fg);
-  border: none;
-  cursor: pointer;
-  background-color: #00000000;
-}
-
-#themeIcon {
-  width: 25px;
-  height: 25px;
+  display: none;
 }
 
 .container {
