--- a/app.css
+++ b/app.css
@@ -14,9 +14,9 @@
 
 :root {
   /* Font Size */
-  --fg-primary: 12vh; /* Time and Greetings */
+  --fg-primary: 8vh; /* Time and Greetings */
   --fg-secondary: 3vh; /* Greetings and Weather widger */
-  --fg-date: 8vh; /* Date */
+  --fg-date: 5vh; /* Date */
   --fg-list: 2vh; /* Links List */
   --icon: 3vh; /* Icon Size */
 
@@ -65,6 +65,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Cairo", sans-serif;
+  line-height: 1.5;
   transition: 0.2s ease-in-out;
 }
 
@@ -116,8 +117,8 @@ body {
 }
 
 .timeBlock {
-  grid-row: 1 / span 2;
-  grid-column: 1 / span 2;
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,8 +126,8 @@ body {
 }
 
 .weatherBlock {
-  grid-column: 1 / span 2;
-  grid-row: 3 / span 2;
+  grid-row: 1 / span 1;
+  grid-column: 2 / span 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -173,7 +174,7 @@ body {
 }
 
 #day {
-  margin-left: 1.5rem;
+  margin-left: 1rem;
 }
 
 #greetings {
@@ -182,8 +183,9 @@ body {
 }
 
 .weatherIcon img {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  display: block;
 }
 
 .weatherValue p {
