💄 Change color alpha values

--- a/app.css
+++ b/app.css
@@ -41,7 +41,7 @@
   /* Dark Colors  */
   --accent: #00d2ffe0; /* Hover color */
   --background: #19171a; /* Background color */
-  --cards: #201e21; /* Cards color */
+  --cards: #201e21f0; /* Cards color */
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
@@ -49,8 +49,8 @@
 
   /* Image background  */
   --imgcol: linear-gradient(
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.2)
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
   ); /* Filter color */
 }
 
