--- a/app.css
+++ b/app.css
@@ -339,16 +339,23 @@ body {
   }
 
   .timeBlock {
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 4;
+    grid-row: 1 / span 1;
+    grid-column: 4 / span 3;
+    flex-direction: column;
   }
 
   .weatherBlock {
-    display: none;
+    grid-row: 2 / span 1;
+    grid-column: 4 / span 3;
   }
 
   #greetings {
     font-size: var(--fg-secondary);
+  }
+
+  .linksBlock {
+    grid-row: 3 / span 2;
+    grid-column: 1 / span 6;
   }
 
   .linksBlockRight {
@@ -356,7 +363,8 @@ body {
   }
 
   .linksBlockLeft {
-    grid-column: 1 / span 4;
+    grid-row: 1 / span 4;
+    grid-column: 1 / span 2;
   }
 
   .button {
